--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ body, html {
 </style>
 </head>
 <body>
+<img src="pic7.jpg" alt="Welcome 2023" width="200" height="800">
 
-<div class="bg-image"></div>
 
 </body>
 </html>
