--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.bg-image {
-  background-image: url("pic7.jpg");
-  height: 80%; 
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 </style>
 </head>
 <body>
-<img src="pic7.jpg" alt="Welcome 2023" width="200" height="800">
+<img src="pic7.jpg" alt="Welcome 2023" width="500" height="800" class="center">
 
 
 </body>
